sửa backend và frontend