@@ -17,6 +17,7 @@ import com.example.backend.dto.response.ResourceUploadPolicyResponse;
 import com.example.backend.entity.Lesson;
 import com.example.backend.entity.Resource;
 import com.example.backend.entity.ResourceAuditLog;
+import com.example.backend.entity.ResourceReference;
 import com.example.backend.entity.User;
 import com.example.backend.entity.assignment.Assignment;
 import com.example.backend.entity.assignment.Submission;
@@ -25,12 +26,14 @@ import com.example.backend.exception.ResourceNotFoundException;
 import com.example.backend.repository.AssignmentRepository;
 import com.example.backend.repository.LessonRepository;
 import com.example.backend.repository.ResourceAuditLogRepository;
+import com.example.backend.repository.ResourceReferenceRepository;
 import com.example.backend.repository.ResourceRepository;
 import com.example.backend.repository.SubmissionRepository;
 import com.example.backend.service.CloudinaryService;
 import com.example.backend.service.ResourceAuthorizationService;
 import com.example.backend.service.ResourceService;
 import com.example.backend.service.UserService;
+import com.example.backend.specification.ResourceSpecification;
 import com.example.backend.utils.FileUploadUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.jdbc.core.JdbcTemplate;
@@ -38,24 +41,35 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.util.ArrayList;
+import java.sql.ResultSet;
+import java.sql.SQLException;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ResourceServiceImpl implements ResourceService {
+    private static final String ATTACHED_FIELD_NAME = "attached.resource";
+    private static final String ENTITY_LESSON = "LESSON";
+    private static final String ENTITY_ASSIGNMENT = "ASSIGNMENT";
+    private static final String ENTITY_SUBMISSION = "SUBMISSION";
 
     private final ResourceRepository resourceRepository;
     private final LessonRepository lessonRepository;
     private final AssignmentRepository assignmentRepository;
     private final SubmissionRepository submissionRepository;
     private final ResourceAuditLogRepository resourceAuditLogRepository;
+    private final ResourceReferenceRepository resourceReferenceRepository;
     private final JdbcTemplate jdbcTemplate;
     private final CloudinaryService cloudinaryService;
     private final UserService userService;
@@ -131,7 +145,7 @@ public class ResourceServiceImpl implements ResourceService {
     public ResourceResponse updateResource(Integer id, ResourceRequest request) {
         Resource resource = resourceRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Resource not found"));
-        resourceAuthorizationService.assertCanUse(resource, resource.getScopeType(), resource.getScopeId());
+        resourceAuthorizationService.assertCanManage(resource);
 
         if (request.getTitle() != null) {
             resource.setTitle(normalizeTitle(request.getTitle()));
@@ -188,7 +202,7 @@ public class ResourceServiceImpl implements ResourceService {
     public void deleteResource(Integer id) {
         Resource resource = resourceRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Resource not found"));
-        resourceAuthorizationService.assertCanUse(resource, resource.getScopeType(), resource.getScopeId());
+        resourceAuthorizationService.assertCanDelete(resource);
         if (resolveUsageCount(resource.getId()) > 0) {
             throw new BusinessException("Không thể xóa media đang được sử dụng. Hãy lưu trữ media thay vì xóa.");
         }
@@ -219,43 +233,311 @@ public class ResourceServiceImpl implements ResourceService {
     }
 
     @Override
+    @Transactional
     public List<ResourceReferenceResponse> getResourceReferences(Integer resourceId) {
         Resource resource = resourceRepository.findById(resourceId)
                 .orElseThrow(() -> new ResourceNotFoundException("Resource not found"));
         resourceAuthorizationService.assertCanUse(resource, null, null);
+        syncResourceReferences(resource);
+        return loadEnrichedResourceReferences(resource.getId());
+    }
 
+    private void syncResourceReferences(Resource resource) {
+        List<ResourceReferenceSeed> seeds = loadCurrentReferenceSeeds(resource.getId());
+        List<ResourceReference> activeReferences = resourceReferenceRepository.findByResource_IdOrderByIdDesc(resource.getId());
+
+        if (hasSameReferenceSet(activeReferences, seeds)) {
+            return;
+        }
+
+        resourceReferenceRepository.softDeleteAllActiveByResourceId(resource.getId());
+        if (seeds.isEmpty()) {
+            return;
+        }
+
+        List<ResourceReference> references = new ArrayList<>();
+        for (ResourceReferenceSeed seed : seeds) {
+            ResourceReference reference = new ResourceReference();
+            reference.setResource(resource);
+            reference.setEntityType(seed.entityType());
+            reference.setEntityId(seed.entityId());
+            reference.setFieldName(seed.fieldName());
+            references.add(reference);
+        }
+        resourceReferenceRepository.saveAll(references);
+    }
+
+    private boolean hasSameReferenceSet(List<ResourceReference> current, List<ResourceReferenceSeed> target) {
+        if (current.size() != target.size()) {
+            return false;
+        }
+
+        List<String> currentKeys = current.stream()
+                .map(item -> buildReferenceKey(item.getEntityType(), item.getEntityId(), item.getFieldName()))
+                .sorted()
+                .toList();
+        List<String> targetKeys = target.stream()
+                .map(item -> buildReferenceKey(item.entityType(), item.entityId(), item.fieldName()))
+                .sorted()
+                .toList();
+        return currentKeys.equals(targetKeys);
+    }
+
+    private String buildReferenceKey(String entityType, Integer entityId, String fieldName) {
+        return (entityType != null ? entityType : "") + "|" + (entityId != null ? entityId : -1) + "|" + (fieldName != null ? fieldName : "");
+    }
+
+    private List<ResourceReferenceSeed> loadCurrentReferenceSeeds(Integer resourceId) {
         String sql = """
-                SELECT 'BANK_QUESTION' AS entity_type, id AS entity_id, 'question.resource' AS field_name, CONCAT('Câu hỏi ngân hàng #', id) AS label
+                SELECT 'BANK_QUESTION' AS entity_type, id AS entity_id, 'question.resource' AS field_name
                 FROM bank_questions WHERE resource_id = ? AND is_deleted = false
                 UNION ALL
-                SELECT 'BANK_QUESTION_OPTION' AS entity_type, id AS entity_id, 'option.resource' AS field_name, CONCAT('Đáp án ngân hàng #', id) AS label
+                SELECT 'BANK_QUESTION_OPTION' AS entity_type, id AS entity_id, 'option.resource' AS field_name
                 FROM bank_question_options WHERE resource_id = ? AND is_deleted = false
                 UNION ALL
-                SELECT 'QUIZ_QUESTION' AS entity_type, id AS entity_id, 'question.resource' AS field_name, CONCAT('Câu hỏi quiz #', id) AS label
+                SELECT 'QUIZ_QUESTION' AS entity_type, id AS entity_id, 'question.resource' AS field_name
                 FROM quiz_question WHERE resource_id = ? AND is_deleted = false
                 UNION ALL
-                SELECT 'QUIZ_ANSWER' AS entity_type, id AS entity_id, 'answer.resource' AS field_name, CONCAT('Đáp án quiz #', id) AS label
+                SELECT 'QUIZ_ANSWER' AS entity_type, id AS entity_id, 'answer.resource' AS field_name
                 FROM quiz_answer WHERE resource_id = ? AND is_deleted = false
                 UNION ALL
-                SELECT 'INTERACTION_ITEM' AS entity_type, id AS entity_id, 'interaction.resource' AS field_name, CONCAT('Tương tác #', id) AS label
+                SELECT 'INTERACTION_ITEM' AS entity_type, id AS entity_id, 'interaction.resource' AS field_name
                 FROM question_interaction_items WHERE resource_id = ? AND is_deleted = false
                 UNION ALL
-                SELECT 'LESSON' AS entity_type, lesson_id AS entity_id, 'lesson.resources' AS field_name, CONCAT('Bài học #', lesson_id) AS label
+                SELECT 'LESSON' AS entity_type, lesson_id AS entity_id, 'lesson.resources' AS field_name
                 FROM resource WHERE id = ? AND lesson_id IS NOT NULL AND is_deleted = false
                 UNION ALL
-                SELECT 'ASSIGNMENT' AS entity_type, assignment_id AS entity_id, 'assignment.resources' AS field_name, CONCAT('Bài tập #', assignment_id) AS label
+                SELECT 'ASSIGNMENT' AS entity_type, assignment_id AS entity_id, 'assignment.resources' AS field_name
                 FROM resource WHERE id = ? AND assignment_id IS NOT NULL AND is_deleted = false
                 UNION ALL
-                SELECT 'SUBMISSION' AS entity_type, submission_id AS entity_id, 'submission.resources' AS field_name, CONCAT('Bài nộp #', submission_id) AS label
+                SELECT 'SUBMISSION' AS entity_type, submission_id AS entity_id, 'submission.resources' AS field_name
                 FROM resource WHERE id = ? AND submission_id IS NOT NULL AND is_deleted = false
+                UNION ALL
+                SELECT entity_type, entity_id, field_name
+                FROM resource_references
+                WHERE resource_id = ?
+                  AND is_deleted = false
+                  AND field_name = 'attached.resource'
+                  AND entity_type IN ('LESSON', 'ASSIGNMENT', 'SUBMISSION')
                 """;
 
-        return jdbcTemplate.query(sql, (rs, rowNum) -> new ResourceReferenceResponse(
+        return jdbcTemplate.query(sql, (rs, rowNum) -> new ResourceReferenceSeed(
                 rs.getString("entity_type"),
                 rs.getInt("entity_id"),
-                rs.getString("field_name"),
-                rs.getString("label")
-        ), resourceId, resourceId, resourceId, resourceId, resourceId, resourceId, resourceId, resourceId);
+                rs.getString("field_name")
+        ), resourceId, resourceId, resourceId, resourceId, resourceId, resourceId, resourceId, resourceId, resourceId);
+    }
+
+    private List<ResourceReferenceResponse> loadEnrichedResourceReferences(Integer resourceId) {
+        String sql = """
+                SELECT
+                    rr.entity_type,
+                    rr.entity_id,
+                    rr.field_name,
+                    CONCAT('Câu hỏi ngân hàng #', bq.id) AS label,
+                    CONCAT('Môn: ', COALESCE(s.title, '-'), ' -> Ngân hàng: ', COALESCE(qb.name, '-')) AS context_path,
+                    NULL AS class_section_id,
+                    NULL AS class_section_title,
+                    NULL AS quiz_id,
+                    NULL AS quiz_title,
+                    qb.id AS question_bank_id,
+                    qb.name AS question_bank_name,
+                    s.id AS subject_id,
+                    s.title AS subject_title
+                FROM resource_references rr
+                JOIN bank_questions bq ON rr.entity_type = 'BANK_QUESTION' AND rr.entity_id = bq.id AND bq.is_deleted = false
+                JOIN question_banks qb ON qb.id = bq.question_bank_id AND qb.is_deleted = false
+                LEFT JOIN subjects s ON s.id = qb.subject_id AND s.is_deleted = false
+                WHERE rr.resource_id = ? AND rr.is_deleted = false
+                UNION ALL
+                SELECT
+                    rr.entity_type,
+                    rr.entity_id,
+                    rr.field_name,
+                    CONCAT('Đáp án ngân hàng #', bqo.id) AS label,
+                    CONCAT('Môn: ', COALESCE(s.title, '-'), ' -> Ngân hàng: ', COALESCE(qb.name, '-'), ' -> Câu hỏi #', bq.id) AS context_path,
+                    NULL AS class_section_id,
+                    NULL AS class_section_title,
+                    NULL AS quiz_id,
+                    NULL AS quiz_title,
+                    qb.id AS question_bank_id,
+                    qb.name AS question_bank_name,
+                    s.id AS subject_id,
+                    s.title AS subject_title
+                FROM resource_references rr
+                JOIN bank_question_options bqo ON rr.entity_type = 'BANK_QUESTION_OPTION' AND rr.entity_id = bqo.id AND bqo.is_deleted = false
+                JOIN bank_questions bq ON bq.id = bqo.bank_question_id AND bq.is_deleted = false
+                JOIN question_banks qb ON qb.id = bq.question_bank_id AND qb.is_deleted = false
+                LEFT JOIN subjects s ON s.id = qb.subject_id AND s.is_deleted = false
+                WHERE rr.resource_id = ? AND rr.is_deleted = false
+                UNION ALL
+                SELECT
+                    rr.entity_type,
+                    rr.entity_id,
+                    rr.field_name,
+                    CONCAT('Câu hỏi quiz #', qq.id) AS label,
+                    CONCAT('Lớp: ', COALESCE(cs.title, '-'), ' -> Quiz: ', COALESCE(q.title, '-')) AS context_path,
+                    cs.id AS class_section_id,
+                    cs.title AS class_section_title,
+                    q.id AS quiz_id,
+                    q.title AS quiz_title,
+                    NULL AS question_bank_id,
+                    NULL AS question_bank_name,
+                    s.id AS subject_id,
+                    s.title AS subject_title
+                FROM resource_references rr
+                JOIN quiz_question qq ON rr.entity_type = 'QUIZ_QUESTION' AND rr.entity_id = qq.id AND qq.is_deleted = false
+                JOIN quiz q ON q.id = qq.quiz_id AND q.is_deleted = false
+                LEFT JOIN class_sections cs ON cs.id = q.class_section_id AND cs.is_deleted = false
+                LEFT JOIN subjects s ON s.id = cs.subject_id AND s.is_deleted = false
+                WHERE rr.resource_id = ? AND rr.is_deleted = false
+                UNION ALL
+                SELECT
+                    rr.entity_type,
+                    rr.entity_id,
+                    rr.field_name,
+                    CONCAT('Đáp án quiz #', qa.id) AS label,
+                    CONCAT('Lớp: ', COALESCE(cs.title, '-'), ' -> Quiz: ', COALESCE(q.title, '-'), ' -> Câu hỏi #', qq.id) AS context_path,
+                    cs.id AS class_section_id,
+                    cs.title AS class_section_title,
+                    q.id AS quiz_id,
+                    q.title AS quiz_title,
+                    NULL AS question_bank_id,
+                    NULL AS question_bank_name,
+                    s.id AS subject_id,
+                    s.title AS subject_title
+                FROM resource_references rr
+                JOIN quiz_answer qa ON rr.entity_type = 'QUIZ_ANSWER' AND rr.entity_id = qa.id AND qa.is_deleted = false
+                JOIN quiz_question qq ON qq.id = qa.quiz_question_id AND qq.is_deleted = false
+                JOIN quiz q ON q.id = qq.quiz_id AND q.is_deleted = false
+                LEFT JOIN class_sections cs ON cs.id = q.class_section_id AND cs.is_deleted = false
+                LEFT JOIN subjects s ON s.id = cs.subject_id AND s.is_deleted = false
+                WHERE rr.resource_id = ? AND rr.is_deleted = false
+                UNION ALL
+                SELECT
+                    rr.entity_type,
+                    rr.entity_id,
+                    rr.field_name,
+                    CONCAT('Mục tương tác #', qii.id) AS label,
+                    CASE
+                        WHEN qq.id IS NOT NULL THEN CONCAT('Lớp: ', COALESCE(cs.title, '-'), ' -> Quiz: ', COALESCE(q.title, '-'), ' -> Câu hỏi #', qq.id)
+                        WHEN bq.id IS NOT NULL THEN CONCAT('Môn: ', COALESCE(s2.title, '-'), ' -> Ngân hàng: ', COALESCE(qb2.name, '-'), ' -> Câu hỏi #', bq.id)
+                        ELSE 'Không xác định'
+                    END AS context_path,
+                    cs.id AS class_section_id,
+                    cs.title AS class_section_title,
+                    q.id AS quiz_id,
+                    q.title AS quiz_title,
+                    qb2.id AS question_bank_id,
+                    qb2.name AS question_bank_name,
+                    COALESCE(s.id, s2.id) AS subject_id,
+                    COALESCE(s.title, s2.title) AS subject_title
+                FROM resource_references rr
+                JOIN question_interaction_items qii ON rr.entity_type = 'INTERACTION_ITEM' AND rr.entity_id = qii.id AND qii.is_deleted = false
+                LEFT JOIN quiz_question qq ON qq.id = qii.quiz_question_id AND qq.is_deleted = false
+                LEFT JOIN quiz q ON q.id = qq.quiz_id AND q.is_deleted = false
+                LEFT JOIN class_sections cs ON cs.id = q.class_section_id AND cs.is_deleted = false
+                LEFT JOIN subjects s ON s.id = cs.subject_id AND s.is_deleted = false
+                LEFT JOIN bank_questions bq ON bq.id = qii.bank_question_id AND bq.is_deleted = false
+                LEFT JOIN question_banks qb2 ON qb2.id = bq.question_bank_id AND qb2.is_deleted = false
+                LEFT JOIN subjects s2 ON s2.id = qb2.subject_id AND s2.is_deleted = false
+                WHERE rr.resource_id = ? AND rr.is_deleted = false
+                UNION ALL
+                SELECT
+                    rr.entity_type,
+                    rr.entity_id,
+                    rr.field_name,
+                    CONCAT('Bài học #', l.id) AS label,
+                    CONCAT('Môn: ', COALESCE(lx.subject_title, '-'), ' -> Lớp: ', COALESCE(lx.class_titles, '-')) AS context_path,
+                    lx.class_section_id,
+                    lx.class_section_title,
+                    NULL AS quiz_id,
+                    NULL AS quiz_title,
+                    NULL AS question_bank_id,
+                    NULL AS question_bank_name,
+                    lx.subject_id,
+                    lx.subject_title
+                FROM resource_references rr
+                JOIN lesson l ON rr.entity_type = 'LESSON' AND rr.entity_id = l.id AND l.is_deleted = false
+                LEFT JOIN (
+                    SELECT
+                        cci.lesson_id,
+                        MIN(cs.id) AS class_section_id,
+                        MIN(cs.title) AS class_section_title,
+                        MIN(s.id) AS subject_id,
+                        MIN(s.title) AS subject_title,
+                        GROUP_CONCAT(DISTINCT cs.title ORDER BY cs.title SEPARATOR ', ') AS class_titles
+                    FROM class_content_items cci
+                    JOIN class_chapters cch ON cch.id = cci.class_chapter_id AND cch.is_deleted = false
+                    JOIN class_sections cs ON cs.id = cch.class_section_id AND cs.is_deleted = false
+                    LEFT JOIN subjects s ON s.id = cs.subject_id AND s.is_deleted = false
+                    WHERE cci.is_deleted = false AND cci.lesson_id IS NOT NULL
+                    GROUP BY cci.lesson_id
+                ) lx ON lx.lesson_id = l.id
+                WHERE rr.resource_id = ? AND rr.is_deleted = false
+                UNION ALL
+                SELECT
+                    rr.entity_type,
+                    rr.entity_id,
+                    rr.field_name,
+                    CONCAT('Bài tập #', a.id) AS label,
+                    CONCAT('Môn: ', COALESCE(s.title, '-'), ' -> Lớp: ', COALESCE(cs.title, '-')) AS context_path,
+                    cs.id AS class_section_id,
+                    cs.title AS class_section_title,
+                    NULL AS quiz_id,
+                    NULL AS quiz_title,
+                    NULL AS question_bank_id,
+                    NULL AS question_bank_name,
+                    s.id AS subject_id,
+                    s.title AS subject_title
+                FROM resource_references rr
+                JOIN assignments a ON rr.entity_type = 'ASSIGNMENT' AND rr.entity_id = a.id AND a.is_deleted = false
+                LEFT JOIN class_sections cs ON cs.id = a.class_section_id AND cs.is_deleted = false
+                LEFT JOIN subjects s ON s.id = cs.subject_id AND s.is_deleted = false
+                WHERE rr.resource_id = ? AND rr.is_deleted = false
+                UNION ALL
+                SELECT
+                    rr.entity_type,
+                    rr.entity_id,
+                    rr.field_name,
+                    CONCAT('Bài nộp #', sub.id) AS label,
+                    CONCAT('Môn: ', COALESCE(s.title, '-'), ' -> Lớp: ', COALESCE(cs.title, '-'), ' -> Bài tập: ', COALESCE(a.title, CONCAT('#', a.id))) AS context_path,
+                    cs.id AS class_section_id,
+                    cs.title AS class_section_title,
+                    NULL AS quiz_id,
+                    NULL AS quiz_title,
+                    NULL AS question_bank_id,
+                    NULL AS question_bank_name,
+                    s.id AS subject_id,
+                    s.title AS subject_title
+                FROM resource_references rr
+                JOIN submission sub ON rr.entity_type = 'SUBMISSION' AND rr.entity_id = sub.id AND sub.is_deleted = false
+                LEFT JOIN assignments a ON a.id = sub.assignment_id AND a.is_deleted = false
+                LEFT JOIN class_sections cs ON cs.id = COALESCE(sub.class_section_id, a.class_section_id) AND cs.is_deleted = false
+                LEFT JOIN subjects s ON s.id = cs.subject_id AND s.is_deleted = false
+                WHERE rr.resource_id = ? AND rr.is_deleted = false
+                ORDER BY entity_type, entity_id
+                """;
+
+        return jdbcTemplate.query(
+                sql,
+                (rs, rowNum) -> new ResourceReferenceResponse(
+                        rs.getString("entity_type"),
+                        rs.getInt("entity_id"),
+                        rs.getString("field_name"),
+                        rs.getString("label"),
+                        rs.getString("context_path"),
+                        nullableInt(rs, "class_section_id"),
+                        rs.getString("class_section_title"),
+                        nullableInt(rs, "quiz_id"),
+                        rs.getString("quiz_title"),
+                        nullableInt(rs, "question_bank_id"),
+                        rs.getString("question_bank_name"),
+                        nullableInt(rs, "subject_id"),
+                        rs.getString("subject_title")
+                ),
+                resourceId, resourceId, resourceId, resourceId, resourceId, resourceId, resourceId, resourceId
+        );
     }
 
     @Override
@@ -277,36 +559,118 @@ public class ResourceServiceImpl implements ResourceService {
 
     @Override
     public List<ResourceResponse> getResourcesByLessonId(Integer lessonId) {
-        return resourceRepository.findByLesson_Id(lessonId)
-                .stream()
-                .map(this::convertEntityToDTO)
-                .collect(Collectors.toList());
+        List<Resource> resources = mergeLegacyAndAttachedResources(
+                resourceRepository.findByLesson_Id(lessonId),
+                resourceReferenceRepository.findByEntityTypeAndEntityIdAndFieldNameOrderByIdDesc(
+                        ENTITY_LESSON,
+                        lessonId,
+                        ATTACHED_FIELD_NAME
+                )
+        );
+        return resources.stream().map(this::convertEntityToDTO).toList();
     }
 
     @Override
     public List<ResourceResponse> getResourcesByAssignmentId(Integer assignmentId) {
-        return resourceRepository.findByAssignment_Id(assignmentId)
-                .stream()
-                .map(this::convertEntityToDTO)
-                .collect(Collectors.toList());
+        List<Resource> resources = mergeLegacyAndAttachedResources(
+                resourceRepository.findByAssignment_Id(assignmentId),
+                resourceReferenceRepository.findByEntityTypeAndEntityIdAndFieldNameOrderByIdDesc(
+                        ENTITY_ASSIGNMENT,
+                        assignmentId,
+                        ATTACHED_FIELD_NAME
+                )
+        );
+        return resources.stream().map(this::convertEntityToDTO).toList();
     }
 
     @Override
     public List<ResourceResponse> getResourcesBySubmissionId(Integer submissionId) {
-        return resourceRepository.findBySubmission_Id(submissionId)
-                .stream()
-                .map(this::convertEntityToDTO)
-                .collect(Collectors.toList());
+        List<Resource> resources = mergeLegacyAndAttachedResources(
+                resourceRepository.findBySubmission_Id(submissionId),
+                resourceReferenceRepository.findByEntityTypeAndEntityIdAndFieldNameOrderByIdDesc(
+                        ENTITY_SUBMISSION,
+                        submissionId,
+                        ATTACHED_FIELD_NAME
+                )
+        );
+        return resources.stream().map(this::convertEntityToDTO).toList();
+    }
+
+    @Override
+    @Transactional
+    public void attachResourceToLesson(Integer lessonId, Integer resourceId) {
+        lessonRepository.findById(lessonId)
+                .orElseThrow(() -> new ResourceNotFoundException("Lesson not found"));
+        attachResource(ENTITY_LESSON, lessonId, resourceId);
+    }
+
+    @Override
+    @Transactional
+    public void attachResourceToAssignment(Integer assignmentId, Integer resourceId) {
+        assignmentRepository.findById(assignmentId)
+                .orElseThrow(() -> new ResourceNotFoundException("Assignment not found"));
+        attachResource(ENTITY_ASSIGNMENT, assignmentId, resourceId);
+    }
+
+    @Override
+    @Transactional
+    public void detachResourceFromLesson(Integer lessonId, Integer resourceId) {
+        lessonRepository.findById(lessonId)
+                .orElseThrow(() -> new ResourceNotFoundException("Lesson not found"));
+        detachResource(ENTITY_LESSON, lessonId, resourceId);
+    }
+
+    @Override
+    @Transactional
+    public void detachResourceFromAssignment(Integer assignmentId, Integer resourceId) {
+        assignmentRepository.findById(assignmentId)
+                .orElseThrow(() -> new ResourceNotFoundException("Assignment not found"));
+        detachResource(ENTITY_ASSIGNMENT, assignmentId, resourceId);
+    }
+
+    @Override
+    @Transactional
+    public void replaceAttachedResources(String entityType, Integer entityId, List<Integer> resourceIds) {
+        if (!StringUtils.hasText(entityType) || entityId == null) {
+            return;
+        }
+        resourceReferenceRepository.softDeleteByEntity(entityType, entityId, ATTACHED_FIELD_NAME);
+        if (resourceIds == null || resourceIds.isEmpty()) {
+            return;
+        }
+
+        for (Integer resourceId : resourceIds) {
+            if (resourceId == null) {
+                continue;
+            }
+            attachResource(entityType, entityId, resourceId);
+        }
     }
 
     @Override
     public ResourceResponse convertEntityToDTO(Resource resource) {
         ResourceResponse response = new ResourceResponse();
+        ResourceType normalizedType = resource.getType();
+        ResourceSource normalizedSource = resource.getSource();
+        String normalizedFileUrl = resource.getFileUrl();
+        String normalizedEmbedUrl = resource.getEmbedUrl();
+        String normalizedCloudinaryId = resource.getCloudinaryId();
+
+        // Backward compatibility: old LINK rows could be stored as EMBED + embedUrl.
+        if (normalizedType == ResourceType.LINK) {
+            normalizedSource = ResourceSource.LINK;
+            if (!StringUtils.hasText(normalizedFileUrl) && StringUtils.hasText(normalizedEmbedUrl)) {
+                normalizedFileUrl = normalizedEmbedUrl;
+            }
+            normalizedEmbedUrl = null;
+            normalizedCloudinaryId = null;
+        }
+
         response.setId(resource.getId());
         response.setTitle(resource.getTitle());
         response.setDescription(resource.getDescription());
-        response.setType(resource.getType());
-        response.setSource(resource.getSource());
+        response.setType(normalizedType);
+        response.setSource(normalizedSource);
         response.setScopeType(resource.getScopeType());
         response.setScopeId(resource.getScopeId());
         response.setVisibility(resource.getVisibility());
@@ -315,9 +679,9 @@ public class ResourceServiceImpl implements ResourceService {
         response.setUsageCount(usageCount);
         response.setLastUsedAt(resource.getLastUsedAt());
         response.setCreatedBy(resource.getCreatedBy());
-        response.setEmbedUrl(resource.getEmbedUrl());
-        response.setCloudinaryId(resource.getCloudinaryId());
-        response.setFileUrl(resource.getFileUrl());
+        response.setEmbedUrl(normalizedEmbedUrl);
+        response.setCloudinaryId(normalizedCloudinaryId);
+        response.setFileUrl(normalizedFileUrl);
         response.setHlsUrl(resource.getHlsUrl());
         response.setMimeType(resource.getMimeType());
         response.setFileSize(resource.getFileSize());
@@ -352,66 +716,42 @@ public class ResourceServiceImpl implements ResourceService {
         ResourceSearchRequest safeRequest = request != null ? request : new ResourceSearchRequest();
         User currentUser = userService.getCurrentUser();
         String currentUsername = currentUser != null ? currentUser.getUserName() : null;
+        boolean isAdmin = currentUser != null
+                && currentUser.getRole() != null
+                && currentUser.getRole().getRoleName() == RoleType.ADMIN;
+        boolean ownerLibrary = Boolean.TRUE.equals(safeRequest.getOwnerLibrary());
+        boolean includeCurrentScope = Boolean.TRUE.equals(safeRequest.getIncludeCurrentScope());
+        boolean hasRequestedScope = safeRequest.getScopeType() != null && safeRequest.getScopeId() != null;
+        boolean canBrowseRequestedScope = hasRequestedScope
+                && resourceAuthorizationService.canBrowseScope(safeRequest.getScopeType(), safeRequest.getScopeId());
+        boolean skipStrictScopeFilter = ownerLibrary && includeCurrentScope && hasRequestedScope;
 
-        Specification<Resource> spec = (root, query, cb) -> cb.conjunction();
-        if (!isAdmin(currentUser)) {
-            spec = spec.and((root, query, cb) -> {
-                var legacyResource = cb.isNull(root.get("createdBy"));
-                var ownResource = cb.equal(root.get("createdBy"), currentUsername);
-                var institutionResource = cb.equal(root.get("visibility"), ResourceVisibility.INSTITUTION);
-
-                if (safeRequest.getScopeType() != null
-                        && safeRequest.getScopeId() != null
-                        && resourceAuthorizationService.canBrowseScope(safeRequest.getScopeType(), safeRequest.getScopeId())) {
-                    var sharedInRequestedScope = cb.and(
-                            cb.equal(root.get("scopeType"), safeRequest.getScopeType()),
-                            cb.equal(root.get("scopeId"), safeRequest.getScopeId()),
-                            cb.equal(root.get("visibility"), ResourceVisibility.SHARED)
-                    );
-                    return cb.or(legacyResource, ownResource, institutionResource, sharedInRequestedScope);
-                }
-
-                return cb.or(legacyResource, ownResource, institutionResource);
-            });
-        }
+        Specification<Resource> spec = Specification.where(
+                ResourceSpecification.visibilityForBrowse(
+                        isAdmin,
+                        currentUsername,
+                        ownerLibrary,
+                        includeCurrentScope,
+                        safeRequest.getScopeType(),
+                        safeRequest.getScopeId(),
+                        canBrowseRequestedScope
+                )
+        );
         if (Boolean.TRUE.equals(safeRequest.getCreatedByMe()) && StringUtils.hasText(currentUsername)) {
-            spec = spec.and((root, query, cb) -> cb.equal(root.get("createdBy"), currentUsername));
+            spec = spec.and(ResourceSpecification.createdBy(currentUsername));
         }
-        if (safeRequest.getScopeType() != null) {
-            spec = spec.and((root, query, cb) -> cb.equal(root.get("scopeType"), safeRequest.getScopeType()));
+        spec = spec.and(ResourceSpecification.ownerContains(safeRequest.getOwner()));
+        if (!skipStrictScopeFilter) {
+            spec = spec.and(ResourceSpecification.hasScopeType(safeRequest.getScopeType()));
+            spec = spec.and(ResourceSpecification.hasScopeId(safeRequest.getScopeId()));
         }
-        if (safeRequest.getScopeId() != null) {
-            spec = spec.and((root, query, cb) -> cb.equal(root.get("scopeId"), safeRequest.getScopeId()));
-        }
-        if (safeRequest.getType() != null) {
-            spec = spec.and((root, query, cb) -> cb.equal(root.get("type"), safeRequest.getType()));
-        }
-        if (safeRequest.getSource() != null) {
-            spec = spec.and((root, query, cb) -> cb.equal(root.get("source"), safeRequest.getSource()));
-        }
-        if (safeRequest.getStatus() != null) {
-            spec = spec.and((root, query, cb) -> cb.equal(root.get("status"), safeRequest.getStatus()));
-        } else {
-            spec = spec.and((root, query, cb) -> cb.or(
-                    cb.isNull(root.get("status")),
-                    cb.equal(root.get("status"), ResourceStatus.ACTIVE)
-            ));
-        }
-        if (StringUtils.hasText(safeRequest.getSearch())) {
-            String keyword = "%" + safeRequest.getSearch().trim().toLowerCase(Locale.ROOT) + "%";
-            spec = spec.and((root, query, cb) -> cb.or(
-                    cb.like(cb.lower(root.get("title")), keyword),
-                    cb.like(cb.lower(root.get("description")), keyword),
-                    cb.like(cb.lower(root.get("mimeType")), keyword)
-            ));
-        }
+        spec = spec.and(ResourceSpecification.hasType(safeRequest.getType()));
+        spec = spec.and(ResourceSpecification.hasSource(safeRequest.getSource()));
+        spec = spec.and(safeRequest.getStatus() != null
+                ? ResourceSpecification.hasStatus(safeRequest.getStatus())
+                : ResourceSpecification.activeByDefault());
+        spec = spec.and(ResourceSpecification.searchContains(safeRequest.getSearch()));
         return spec;
-    }
-
-    private boolean isAdmin(User user) {
-        return user != null
-                && user.getRole() != null
-                && user.getRole().getRoleName() == RoleType.ADMIN;
     }
 
     @Override
@@ -524,12 +864,18 @@ public class ResourceServiceImpl implements ResourceService {
                   (SELECT COUNT(*) FROM question_interaction_items WHERE resource_id = ? AND is_deleted = false) +
                   (SELECT COUNT(*) FROM resource WHERE id = ? AND lesson_id IS NOT NULL AND is_deleted = false) +
                   (SELECT COUNT(*) FROM resource WHERE id = ? AND assignment_id IS NOT NULL AND is_deleted = false) +
-                  (SELECT COUNT(*) FROM resource WHERE id = ? AND submission_id IS NOT NULL AND is_deleted = false)
+                  (SELECT COUNT(*) FROM resource WHERE id = ? AND submission_id IS NOT NULL AND is_deleted = false) +
+                  (SELECT COUNT(*)
+                     FROM resource_references
+                    WHERE resource_id = ?
+                      AND is_deleted = false
+                      AND field_name = 'attached.resource'
+                      AND entity_type IN ('LESSON', 'ASSIGNMENT', 'SUBMISSION'))
                 """;
         Integer count = jdbcTemplate.queryForObject(
                 sql,
                 Integer.class,
-                resourceId, resourceId, resourceId, resourceId, resourceId, resourceId, resourceId, resourceId
+                resourceId, resourceId, resourceId, resourceId, resourceId, resourceId, resourceId, resourceId, resourceId
         );
         return count != null ? count : 0;
     }
@@ -566,7 +912,13 @@ public class ResourceServiceImpl implements ResourceService {
 
         ResourceSource source = resource.getSource();
         if (source == null) {
-            source = StringUtils.hasText(resource.getEmbedUrl()) ? ResourceSource.EMBED : ResourceSource.UPLOAD;
+            if (StringUtils.hasText(resource.getEmbedUrl())) {
+                source = ResourceSource.EMBED;
+            } else if (resource.getType() == ResourceType.LINK && StringUtils.hasText(resource.getFileUrl())) {
+                source = ResourceSource.LINK;
+            } else {
+                source = ResourceSource.UPLOAD;
+            }
             resource.setSource(source);
         }
 
@@ -574,6 +926,7 @@ public class ResourceServiceImpl implements ResourceService {
             if (!StringUtils.hasText(resource.getEmbedUrl())) {
                 throw new BusinessException("Embed URL is required for EMBED resource");
             }
+            resource.setEmbedUrl(normalizeEmbedUrl(resource.getEmbedUrl()));
             resource.setFileUrl(null);
             resource.setCloudinaryId(null);
             if (resource.getType() == null) {
@@ -581,6 +934,31 @@ public class ResourceServiceImpl implements ResourceService {
             }
             if (!StringUtils.hasText(resource.getTitle())) {
                 resource.setTitle(buildDefaultTitle(resource.getEmbedUrl()));
+            }
+            return;
+        }
+
+        if (source == ResourceSource.LINK) {
+            if (!StringUtils.hasText(resource.getFileUrl())) {
+                throw new BusinessException("File URL is required for LINK resource");
+            }
+            resource.setEmbedUrl(null);
+            resource.setCloudinaryId(null);
+            resource.setFileUrl(resource.getFileUrl().trim());
+            resource.setType(ResourceType.LINK);
+            if (!StringUtils.hasText(resource.getTitle())) {
+                resource.setTitle(buildDefaultTitle(resource.getFileUrl()));
+            }
+            return;
+        }
+
+        if (resource.getType() == ResourceType.LINK && StringUtils.hasText(resource.getFileUrl())) {
+            resource.setSource(ResourceSource.LINK);
+            resource.setEmbedUrl(null);
+            resource.setCloudinaryId(null);
+            resource.setFileUrl(resource.getFileUrl().trim());
+            if (!StringUtils.hasText(resource.getTitle())) {
+                resource.setTitle(buildDefaultTitle(resource.getFileUrl()));
             }
             return;
         }
@@ -615,13 +993,145 @@ public class ResourceServiceImpl implements ResourceService {
         return candidate.length() > 120 ? candidate.substring(0, 120) : candidate;
     }
 
+    private String normalizeEmbedUrl(String rawUrl) {
+        if (!StringUtils.hasText(rawUrl)) {
+            return rawUrl;
+        }
+
+        String normalized = rawUrl.trim();
+
+        Matcher youtubeMatcher = YOUTUBE_EMBED_PATTERN.matcher(normalized);
+        if (youtubeMatcher.find()) {
+            return "https://www.youtube.com/embed/" + youtubeMatcher.group(1);
+        }
+
+        Matcher vimeoMatcher = VIMEO_EMBED_PATTERN.matcher(normalized);
+        if (vimeoMatcher.find()) {
+            return "https://player.vimeo.com/video/" + vimeoMatcher.group(1);
+        }
+
+        return normalized;
+    }
+
+    private static final Pattern YOUTUBE_EMBED_PATTERN = Pattern.compile(
+            "(?:youtube\\.com/(?:watch\\?v=|embed/|shorts/)|youtu\\.be/)([A-Za-z0-9_-]{6,})",
+            Pattern.CASE_INSENSITIVE
+    );
+
+    private static final Pattern VIMEO_EMBED_PATTERN = Pattern.compile(
+            "vimeo\\.com/(?:video/)?(\\d+)",
+            Pattern.CASE_INSENSITIVE
+    );
+
+    private List<Resource> mergeLegacyAndAttachedResources(
+            List<Resource> legacyResources,
+            List<ResourceReference> attachedReferences
+    ) {
+        Map<Integer, Resource> merged = new java.util.LinkedHashMap<>();
+        if (legacyResources != null) {
+            for (Resource resource : legacyResources) {
+                if (resource != null && resource.getId() != null) {
+                    merged.put(resource.getId(), resource);
+                }
+            }
+        }
+        if (attachedReferences != null) {
+            for (ResourceReference reference : attachedReferences) {
+                Resource resource = reference != null ? reference.getResource() : null;
+                if (resource != null && resource.getId() != null) {
+                    merged.putIfAbsent(resource.getId(), resource);
+                }
+            }
+        }
+        return new ArrayList<>(merged.values());
+    }
+
+    private void attachResource(String entityType, Integer entityId, Integer resourceId) {
+        Resource resource = resourceRepository.findById(resourceId)
+                .orElseThrow(() -> new ResourceNotFoundException("Resource not found"));
+        resourceAuthorizationService.assertCanUse(resource, null, null);
+        if (resource.getStatus() == ResourceStatus.ARCHIVED) {
+            throw new BusinessException("Archived media cannot be attached");
+        }
+
+        boolean exists = resourceReferenceRepository.existsByResource_IdAndEntityTypeAndEntityIdAndFieldName(
+                resourceId,
+                entityType,
+                entityId,
+                ATTACHED_FIELD_NAME
+        );
+        if (exists) {
+            return;
+        }
+
+        ResourceReference reference = new ResourceReference();
+        reference.setResource(resource);
+        reference.setEntityType(entityType);
+        reference.setEntityId(entityId);
+        reference.setFieldName(ATTACHED_FIELD_NAME);
+        resourceReferenceRepository.save(reference);
+
+        resource.setLastUsedAt(LocalDateTime.now());
+        resourceRepository.save(resource);
+        logResourceAction(resource, "ATTACH", "Gắn media vào nội dung");
+    }
+
+    private void detachResource(String entityType, Integer entityId, Integer resourceId) {
+        Resource resource = resourceRepository.findById(resourceId)
+                .orElseThrow(() -> new ResourceNotFoundException("Resource not found"));
+        resourceAuthorizationService.assertCanUse(resource, null, null);
+
+        boolean detached = false;
+        if (ENTITY_LESSON.equals(entityType)
+                && resource.getLesson() != null
+                && resource.getLesson().getId() != null
+                && resource.getLesson().getId().equals(entityId)) {
+            resource.setLesson(null);
+            detached = true;
+        }
+        if (ENTITY_ASSIGNMENT.equals(entityType)
+                && resource.getAssignment() != null
+                && resource.getAssignment().getId() != null
+                && resource.getAssignment().getId().equals(entityId)) {
+            resource.setAssignment(null);
+            detached = true;
+        }
+        if (ENTITY_SUBMISSION.equals(entityType)
+                && resource.getSubmission() != null
+                && resource.getSubmission().getId() != null
+                && resource.getSubmission().getId().equals(entityId)) {
+            resource.setSubmission(null);
+            detached = true;
+        }
+
+        resourceReferenceRepository.softDeleteByEntityAndResource(entityType, entityId, ATTACHED_FIELD_NAME, resourceId);
+        resourceReferenceRepository.softDeleteByEntityAndResource(entityType, entityId, entityType.toLowerCase(Locale.ROOT) + ".resources", resourceId);
+
+        if (detached) {
+            resourceRepository.save(resource);
+        }
+        logResourceAction(resource, "DETACH", "Gỡ media khỏi nội dung");
+    }
+
     private void validateStandaloneResource(Resource resource) {
         if (resource.getSource() == ResourceSource.EMBED && !StringUtils.hasText(resource.getEmbedUrl())) {
             throw new BusinessException("Embed URL is required");
         }
 
+        if (resource.getSource() == ResourceSource.LINK && !StringUtils.hasText(resource.getFileUrl())) {
+            throw new BusinessException("File URL is required");
+        }
+
         if (resource.getSource() == ResourceSource.UPLOAD && !StringUtils.hasText(resource.getFileUrl())) {
             throw new BusinessException("File URL is required");
         }
+    }
+
+    private Integer nullableInt(ResultSet rs, String column) throws SQLException {
+        Number number = (Number) rs.getObject(column);
+        return number != null ? number.intValue() : null;
+    }
+
+    private record ResourceReferenceSeed(String entityType, Integer entityId, String fieldName) {
     }
 }
